# magic-memories-page

./: .env.example  .gitignore  .replit  GUIA_VPS.md  README.md  admin_config.json  app.py  config.py  deploy.sh  magicmemories.service  models.py  pyproject.toml  replit.md  requirements.txt  translations.py
docs/: comparison_dragon_garden_vs_magic_chef.md
scripts/: post-merge.sh
services/: ai_service.py  email_service.py  epub_service.py  fixed_stories.py  illustrated_book_service.py  lulu_api_service.py  lulu_storage.py  moderation_service.py  pdf_service.py  replicate_service.py  task_queue.py  vps_upload_service.py
story_previews/: 0a7fd7f0bb88.json  380b1c42972d.json  6751bf855537.json  a45dcf855463.json  b8c52d807736.json  c3da03dbb760.json  e91db0f9d1c2.json
templates/: about.html  admin_coupons.html  admin_dashboard.html  admin_gift_book.html  admin_gift_download.html  admin_login.html  admin_lulu_order_detail.html  admin_lulu_orders.html  admin_newsletter.html  admin_personalized_book_detail.html  admin_photos.html  admin_preview.html  admin_preview_leads.html  admin_print_requests.html  admin_quick_story_detail.html  admin_rescue_order.html  admin_settings.html  baby_story_preview.html  base.html  birthday_1_3.html  birthday_4_6.html  birthday_7_9.html  birthday_selection.html  checkout_unified.html  contact.html  faq.html  furry_love_catalog.html  index.html  order_complete.html  personalize_furry_love.html  personalize_story.html  personalized_books.html  pricing.html  print_order.html  print_order_success.html  privacy.html  renew_ebook.html  (+10 more)
(+62 files in other folders)
